--- a/style.css
+++ b/style.css
@@ -1,32 +1,106 @@
-@import url('https://fonts.googleapis.com/css?family=Orbitron');
+@import url(http://allfont.net/allfont.css?fonts=agency-fb);
+@import url(http://allfont.net/allfont.css?fonts=agency-fb-bold);
+html,
+body {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  background: #000;
+  color: #518eaa;
+  text-align: center;
+  font-family: "Agency FB", "Agency FB Bold", Helvetica, Arial;
+}
+
+h1 {
+  margin-top: 50px;
+  margin-bottom: 30px;
+  font-size: 36px;
+  line-height: 1.25;
+  color: #fff;
+  text-transform: uppercase;
+  
+}
+
+h2 {
+  font-size: 40px;
+  line-height: 1.1;
+  font-weight: 100;
+  margin-top: 25px;
+  margin-bottom: 20px;
+}
+@media screen and (max-width: 480px){
+  h2{
+    font-size: 32px;
+  }
+}
+h3 {
+  font-size: 26px;
+  line-height: 1.7;
+  padding-bottom: 0;
+  text-transform: uppercase;
+}
+
+p {
+  margin: 10px 0;
+  font-size: 26px;
+  line-height: 1.7;
+}
+
+a {
+  color: #518eaa;
+  text-decoration: none;
+}
+
 #clockdiv {
   text-align: center;
   font-size: 30px;
 }
 
 #clockdiv > div {
-  padding: 10px;
+  padding: 0 10px;
   border-radius: 3px;
   display: inline-block;
   font-size: 48px;
+  min-width: 75px;
+  position: relative;
+  font-family: "Agency FB Bold"
 }
-
+@media screen and (max-width: 480px){
+  #clockdiv > div:first-child {
+    display: block;
+  }
+  #clockdiv > div:nth-child(2):before {
+    content: '';
+  }
+}
 #clockdiv > div + div:before {
   content: ':';
-  font-size: 20px;
+  position: absolute;
+  left: -8px;
+  top: 50%;
+  transform: translateY(-50%);
+  margin-top: -30px;
+  font-family: "Agency FB Bold"
 }
 
 #clockdiv div > span {
-  padding: 15px;
+  padding: 0 15px;
   border-radius: 3px;
   display: inline-block;
-  font-size: 26px;
-  line-height: 1.7;
+  line-height: 0.95;
+  font-size: 48px;
+  width: 40px;
 }
 
 .smalltext {
-  padding-top: 5px;
-  font-size: 16px;
+  padding-top: 0px;
+  font-size: 26px;
+  line-height: 1.625;
+  
+  font-family: "Agency FB";
+  font-weight: 400;
 }
 
 .l-container {
@@ -38,49 +112,35 @@
   position: relative;
 }
 
-@media screen and (min-width: 900px) {
+@media screen and (min-width: 1200px) {
   .l-container {
-    width: 900px;
+    width: 1200px;
   }
 }
 
 .content {
-  padding-bottom: 55px;
+  padding-bottom: 25px;
   border-bottom: 1px solid #518eaa;
   margin-bottom: 110px;
 }
 
-img {
+img,
+video {
   max-width: 100%;
   height: auto;
   display: block;
 }
 
-body {
-  background: #000;
-  color: #518eaa;
-  text-align: center;
-  font-family: "Orbitron", "BureauAgencyBold", Helvetica, Arial;
-}
-.uppercase{
-  text-transform: uppercase;
-}
-h1 {
-  font-size: 36px;
-  line-height: 1.25;
-  color: #fff;
+.upperCase {
   text-transform: uppercase;
 }
 
-a {
-  color: #518eaa;
-  text-decoration: none;
+@media screen and (min-width: 768px) {
+  .l-contacts h3 {
+    margin-top: 0;
+  }
 }
-@media screen and (min-width: 768px){
-  .l-contacts h3{
-  margin-top: 0;
-}
-}
+
 .c-contacts__contact {
   width: 24px;
   height: 24px;
@@ -108,27 +168,42 @@ svg {
   .l-contacts {
     position: absolute;
     right: 0;
-    width: 100px;
+    width: 110px;
     top: 0;
   }
 }
 
 .c-contacts h3 {
   border-bottom: 1px solid #518eaa;
-  padding-bottom: 15px;
+  padding-right: 15px;
 }
-@media screen and (min-width: 768px){
-  .c-contacts h3 {
-    padding-left: 15px;}
-}
-@media screen and (max-width: 767px){
-  
+
 .c-contacts__links {
-  display: flex;
-  justify-content: center;
-  align-items: center
-}  
-  .c-contacts__links a+a{
+  margin-right: 10px;
+}
+
+@media screen and (min-width: 768px) {
+  .c-contacts h3 {
+    padding-left: 30px;text-align: right;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .c-contacts__links {
+    display: flex;
+    justify-content: center;
+    align-items: center
+  }
+  .c-contacts__links a+a {
     margin-left: 10px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .c-contacts__links {
+    margin-right: 0;
+  }
+  .c-contacts__links h3{
+    margin-right: 0;
   }
 }
