--- a/style.css
+++ b/style.css
@@ -1,5 +1,18 @@
-@import url(http://allfont.net/allfont.css?fonts=agency-fb);
-@import url(http://allfont.net/allfont.css?fonts=agency-fb-bold);
+@font-face {
+	font-family: 'Agency FB';
+	src: url('assets/AgencyFB-Reg.woff') format('woff'),
+		url('AgencyFB-Reg.svg#AgencyFB-Reg') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'Agency FB';
+	src: url('assets/AgencyFB-Bold.woff') format('woff'),
+		url('AgencyFB-Bold.svg#AgencyFB-Bold') format('svg');
+	font-weight: bold;
+	font-style: normal;
+}
 html,
 body {
   margin: 0;
@@ -10,7 +23,7 @@ body {
   background: #000;
   color: #518eaa;
   text-align: center;
-  font-family: "Agency FB", "Agency FB Bold", Helvetica, Arial;
+  font-family: "Agency FB", Helvetica, Arial;
 }
 
 h1 {
@@ -65,7 +78,8 @@ a {
   font-size: 48px;
   min-width: 75px;
   position: relative;
-  font-family: "Agency FB Bold"
+  font-family: "Agency FB";
+    font-weight: 700;
 }
 @media screen and (max-width: 480px){
   #clockdiv > div:first-child {
